# ogre-next-rmlui-test

./: .gitmodules  CMakeLists.txt  README.md
data/: frame_stats.rml  test_scene.glb  ui.rml
src/: FPSGame.cpp  FPSGame.h  GUI.cpp  GUI.h  SceneLoader.cpp  SceneLoader.h  ShellFileInterface.cpp  main.cpp
